Changing text for <title> tags

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-    Login
+    Healthy Habits -Login
 {% endblock %}
 
 {% block styles %}
