--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-    Todo List
+    Healthy Habits - Calculate your recommended caloric intake
 {% endblock %}
 
 {% block styles %}
