--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-    Todo List
+    Healthy Habits
 {% endblock %}
 
 {% block styles %}
