--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-    Register
+    Healthy Habits - Register
 {% endblock %}
 
 {% block styles %}
